Preview and target notes

--- a/app/components/lookbook/ui/layouts/preview_inspector/markdown_panel/markdown_panel.html.erb
+++ b/app/components/lookbook/ui/layouts/preview_inspector/markdown_panel/markdown_panel.html.erb
@@ -1,3 +1,3 @@
 <%= render Lookbook::UI::Panel.new(**tag_attrs, x: {data: "markdownPanel"}, data: {panel: "markdown"}) do |panel| %>  
-  <%= markdown(content) %>
+  <%= lookbook_prose(markdown: true) { content } %>
 <% end %>
