--- a/app/components/lookbook/ui/code/code.css
+++ b/app/components/lookbook/ui/code/code.css
@@ -1,13 +1,172 @@
+@import "npm:codejar-linenumbers/es/codejar-linenumbers.css";
+
 [data-component="code"] {
   display: block;
+  &:focus-visible {
+    outline: 0;
+    border: 0;
+  }
 
-  pre,
-  code {
-    font-family: var(--sl-font-mono);
-    font-size: var(--sl-font-size-small);
-    display: block;
+  .code-source {
+    display: none;
+  }
+
+  .code-editor {
+    width: 100%;
     height: 100%;
+  }
+
+  code,
+  pre {
+    height: 100%;
+    background-color: var(--sl-color-neutral-50);
+    color: var(--sl-color-neutral-800);
+    font-family: var(--sl-font-mono);
+    direction: ltr;
+    text-align: left;
+    /* white-space: pre; */
+    word-spacing: normal;
+    word-break: normal;
+    font-size: var(--sl-font-size-small);
+    line-height: 1.5;
+
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+
+    &:focus-visible {
+      outline: 0;
+    }
+  }
+
+  pre > code {
+    font-size: var(--sl-font-size-small);
+    line-height: 1.5;
+  }
+
+  pre::-moz-selection,
+  pre ::-moz-selection,
+  code::-moz-selection,
+  code ::-moz-selection {
+    background: #c1def1;
+  }
+
+  pre::selection,
+  pre ::selection,
+  code::selection,
+  code ::selection {
+    background: #c1def1;
+  }
+
+  pre {
+    padding-block: var(--sl-spacing-x-small);
+    padding-inline: var(--sl-spacing-x-small);
     margin: 0;
-    padding: 0;
+    overflow: auto;
+    background-color: var(--sl-color-neutral-50);
+  }
+
+  /* Inline code */
+  /* :not(pre) > code {
+    padding: 0.2em;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    background: #f8f8f8;
+    border: 1px solid #dddddd;
+  } */
+
+  .token.comment,
+  .token.prolog,
+  .token.doctype,
+  .token.cdata {
+    color: var(--sl-color-neutral-400);
+    font-style: italic;
+  }
+
+  .token.namespace {
+    opacity: 0.7;
+  }
+
+  .token.string {
+    color: var(--sl-color-blue-700);
+  }
+
+  .token.punctuation,
+  .token.operator {
+    color: var(--sl-color-neutral-800);
+  }
+
+  .token.url,
+  .token.symbol,
+  .token.number,
+  .token.boolean,
+  .token.variable,
+  .token.constant,
+  .token.inserted {
+    color: #36acaa;
+  }
+
+  .token.atrule,
+  .token.keyword,
+  .token.attr-value,
+  .language-autohotkey .token.selector,
+  .language-json .token.boolean,
+  .language-json .token.number,
+  code[class*="language-css"] {
+    color: var(--sl-color-primary-700);
+  }
+
+  .token.function {
+    color: #393a34;
+  }
+
+  .token.deleted,
+  .language-autohotkey .token.tag {
+    color: #9a050f;
+  }
+
+  .token.selector,
+  .language-autohotkey .token.keyword {
+    color: #00009f;
+  }
+
+  .token.important {
+    color: #e90;
+  }
+
+  .token.important,
+  .token.bold {
+    font-weight: bold;
+  }
+
+  .token.italic {
+    font-style: italic;
+  }
+
+  .token.class-name,
+  .language-json .token.property {
+    color: #2b91af;
+  }
+
+  .token.tag,
+  .token.selector {
+    color: var(--sl-color-teal-600);
+  }
+
+  .token.attr-name,
+  .token.property,
+  .token.regex,
+  .token.entity {
+    color: var(--sl-color-fuchsia-700);
+  }
+
+  .token.directive.tag .tag {
+    background: #ffff00;
+    color: #393a34;
   }
 }
