Rework inspector panels

--- a/app/views/lookbook/inspector/panels/_notes.html.erb
+++ b/app/views/lookbook/inspector/panels/_notes.html.erb
@@ -1,16 +1,17 @@
 
-<% if target.scenarios_with_notes.any? %>
-<% target.scenarios_with_notes do |scenario, notes| %>
-<section style="padding-block: var(--sl-spacing-medium); <%= 'border-bottom: 1px solid var(--lookbook-divider-color);' unless scenario == target.scenarios_with_notes.last %>">
-  <% if target.scenarios.many? %>
-    <h3 style="color: var(--sl-color-neutral-400); margin-bottom: var(--sl-spacing-small);"><%= scenario.label %></h3>
+<%= lookbook_inspector_panel(:prose, id: dom_id(target, :notes_panel)) do %>
+  <% if target.scenarios_with_notes.any? %>
+  <% target.scenarios_with_notes do |scenario, notes| %>
+  <section style="padding-block: var(--sl-spacing-medium); <%= 'border-bottom: 1px solid var(--lookbook-divider-color);' unless scenario == target.scenarios_with_notes.last %>">
+    <% if target.scenarios.many? %>
+      <h3 style="color: var(--sl-color-neutral-400); margin-bottom: var(--sl-spacing-small);"><%= scenario.label %></h3>
+    <% end %>
+    <%= markdown(notes) %>
+  </section>
   <% end %>
-  <%= markdown(notes) %>
-</section>
+  <% else %>
+  <section style="padding-block: var(--sl-spacing-medium);">
+    <em style="color: var(--sl-color-neutral-400);">No notes available.</em>
+  </section>
+  <% end %>
 <% end %>
-<% else %>
-<section style="padding-block: var(--sl-spacing-medium);">
-  <em style="color: var(--sl-color-neutral-400);">No notes available.</em>
-</section>
-<% end %>
-
