--- a/app/components/lookbook/ui/code/code.html.erb
+++ b/app/components/lookbook/ui/code/code.html.erb
@@ -1,4 +1,3 @@
 <%= render component_tag(x: {data: "code"}) do %>
-  <pre><code x-ref="editor" class="code-editor language-<%= language %>"></code></pre>
-  <code x-ref="source" class="code-source"><%= raw source %></code>
+  <pre><code x-ref="code" class="language-<%= language %>"><%= raw source %></code></pre>
 <% end %>
