Fix code height

--- a/app/components/lookbook/ui/layouts/preview_inspector/code_panel/code_panel.css
+++ b/app/components/lookbook/ui/layouts/preview_inspector/code_panel/code_panel.css
@@ -2,8 +2,14 @@
   .code-panel-code {
     height: 100%;
     overflow: auto;
+
     [data-component="code"] {
       height: 100%;
+
+      pre,
+      code {
+        height: 100%;
+      }
     }
   }
 
