--- a/app/components/lookbook/ui/prose/prose.css
+++ b/app/components/lookbook/ui/prose/prose.css
@@ -1,2 +1,327 @@
 [data-component="prose"] {
+  color: var(--sl-color-neutral-900);
+  font-size: 1rem;
+  line-height: 1.75;
+
+  [class~="lead"] {
+    color: var(--sl-color-neutral-900);
+    font-size: 1.25em;
+    line-height: 1.6;
+    margin-top: 1.2em;
+    margin-bottom: 1.2em;
+  }
+
+  a {
+    position: relative;
+  }
+
+  strong {
+    font-weight: 600;
+  }
+
+  ol {
+    counter-reset: list-counter;
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
+  }
+
+  ol > li {
+    position: relative;
+    counter-increment: list-counter;
+    padding-left: 1.75em;
+  }
+
+  ol > li::before {
+    content: counter(list-counter) ".";
+    position: absolute;
+    font-weight: 400;
+    color: var(--sl-color-neutral-600);
+  }
+
+  ul > li {
+    position: relative;
+    padding-left: 1.75em;
+  }
+
+  ul > li::before {
+    content: "";
+    position: absolute;
+    background-color: var(--sl-color-neutral-400);
+    border-radius: 50%;
+    width: 0.375em;
+    height: 0.375em;
+    top: calc(0.875em - 0.1875em);
+    left: 0.25em;
+  }
+
+  hr {
+    border-color: var(--lookbook-divider-color);
+    border-top-width: 1px;
+    margin-top: 3em;
+    margin-bottom: 3em;
+  }
+
+  blockquote {
+    font-weight: 500;
+    font-style: italic;
+    color: #1a202c;
+    border-left-width: 0.25rem;
+    border-left-color: var(--lookbook-divider-color);
+    quotes: "\201C" "\201D" "\2018" "\2019";
+    margin-top: 1.6em;
+    margin-bottom: 1.6em;
+    padding-left: 1em;
+  }
+
+  blockquote p:first-of-type::before {
+    content: open-quote;
+  }
+
+  blockquote p:last-of-type::after {
+    content: close-quote;
+  }
+
+  h1 {
+    font-weight: 800;
+    font-size: 2.25em;
+    margin-top: 0;
+    margin-bottom: 0.8888889em;
+    line-height: 1.1111111;
+  }
+
+  h2 {
+    font-weight: 700;
+    font-size: 1.5em;
+    margin-top: 2em;
+    margin-bottom: 1em;
+    line-height: 1.3333333;
+  }
+
+  h3 {
+    font-weight: 600;
+    font-size: 1.25em;
+    margin-top: 1.6em;
+    margin-bottom: 0.6em;
+    line-height: 1.6;
+  }
+
+  h4 {
+    font-weight: 600;
+    margin-top: 1.5em;
+    margin-bottom: 0.5em;
+    line-height: 1.5;
+  }
+
+  figure figcaption {
+    color: var(--sl-color-neutral-600);
+    font-size: 0.875em;
+    line-height: 1.4285714;
+    margin-top: 0.8571429em;
+  }
+
+  code {
+    color: var(--sl-color-neutral-900);
+    font-weight: 600;
+    font-size: 0.875em;
+  }
+
+  code::before {
+    content: "`";
+  }
+
+  code::after {
+    content: "`";
+  }
+
+  pre {
+    color: var(--sl-color-neutral-300);
+    background-color: var(--sl-color-neutral-800);
+    overflow-x: auto;
+    font-size: 0.875em;
+    line-height: 1.7142857;
+    margin-top: 1.7142857em;
+    margin-bottom: 1.7142857em;
+    border-radius: 0.375rem;
+    padding-top: 0.8571429em;
+    padding-right: 1.1428571em;
+    padding-bottom: 0.8571429em;
+    padding-left: 1.1428571em;
+  }
+
+  pre code {
+    background-color: transparent;
+    border-width: 0;
+    border-radius: 0;
+    padding: 0;
+    font-weight: 400;
+    color: inherit;
+    font-size: inherit;
+    font-family: inherit;
+    line-height: inherit;
+  }
+
+  pre code::before {
+    content: "";
+  }
+
+  pre code::after {
+    content: "";
+  }
+
+  table {
+    width: 100%;
+    table-layout: auto;
+    text-align: left;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    font-size: 0.875em;
+    line-height: 1.7142857;
+  }
+
+  thead {
+    color: #1a202c;
+    font-weight: 600;
+    border-bottom-width: 1px;
+    border-bottom-color: var(--lookbook-divider-color);
+  }
+
+  thead th {
+    vertical-align: bottom;
+    padding-right: 0.5714286em;
+    padding-bottom: 0.5714286em;
+    padding-left: 0.5714286em;
+  }
+
+  tbody tr {
+    border-bottom-width: 1px;
+    border-bottom-color: var(--lookbook-divider-color);
+  }
+
+  tbody tr:last-child {
+    border-bottom-width: 0;
+  }
+
+  tbody td {
+    vertical-align: top;
+    padding-top: 0.5714286em;
+    padding-right: 0.5714286em;
+    padding-bottom: 0.5714286em;
+    padding-left: 0.5714286em;
+  }
+
+  p {
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
+  }
+
+  img {
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
+
+  video {
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
+
+  figure {
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
+
+  figure > * {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  h2 code {
+    font-size: 0.875em;
+  }
+
+  h3 code {
+    font-size: 0.9em;
+  }
+
+  ul {
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
+  }
+
+  li {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+  }
+
+  ol > li:before {
+    left: 0;
+  }
+
+  > ul > li p {
+    margin-top: 0.75em;
+    margin-bottom: 0.75em;
+  }
+
+  > ul > li > *:first-child {
+    margin-top: 1.25em;
+  }
+
+  > ul > li > *:last-child {
+    margin-bottom: 1.25em;
+  }
+
+  > ol > li > *:first-child {
+    margin-top: 1.25em;
+  }
+
+  > ol > li > *:last-child {
+    margin-bottom: 1.25em;
+  }
+
+  ul ul,
+  ul ol,
+  ol ul,
+  ol ol {
+    margin-top: 0.75em;
+    margin-bottom: 0.75em;
+  }
+
+  hr + * {
+    margin-top: 0;
+  }
+
+  h2 + * {
+    margin-top: 0;
+  }
+
+  h3 + * {
+    margin-top: 0;
+  }
+
+  h4 + * {
+    margin-top: 0;
+  }
+
+  thead th:first-child {
+    padding-left: 0;
+  }
+
+  thead th:last-child {
+    padding-right: 0;
+  }
+
+  tbody td:first-child {
+    padding-left: 0;
+  }
+
+  tbody td:last-child {
+    padding-right: 0;
+  }
+
+  & > :first-child {
+    margin-top: 0;
+  }
+
+  & > :last-child {
+    margin-bottom: 0;
+  }
 }
