--- a/app/components/lookbook/ui/layouts/preview_inspector/default_panel/default_panel.html.erb
+++ b/app/components/lookbook/ui/layouts/preview_inspector/default_panel/default_panel.html.erb
@@ -1,3 +1,3 @@
-<%= render Lookbook::UI::Panel.new(**tag_attrs, x: {data: "defaultPanel"}, data: {panel: "default"}) do |panel| %>  
+<%= lookbook_panel(**args, x: {data: "defaultPanel"}, data: {panel: "default"}) do %>
   <%= content %>
 <% end %>
