--- a/app/components/lookbook/ui/layouts/preview_inspector/prose_panel/prose_panel.html.erb
+++ b/app/components/lookbook/ui/layouts/preview_inspector/prose_panel/prose_panel.html.erb
@@ -1,3 +1,3 @@
-<%= render Lookbook::UI::Panel.new(**tag_attrs, x: {data: "prosePanel"}, data: {panel: "prose"}) do |panel| %>  
+<%= lookbook_panel(**args, x: {data: "prosePanel"}, data: {panel: "prose"}) do |panel| %>  
   <%= lookbook_prose(markdown: markdown?) { content } %>
 <% end %>
