--- a/app/components/lookbook/ui/layouts/preview_overview/preview_overview.html.erb
+++ b/app/components/lookbook/ui/layouts/preview_overview/preview_overview.html.erb
@@ -8,7 +8,7 @@
     <% end %>
 
     <div class="po-breadcrumbs">
-      <span class="po-breadcrumb"><%= preview_collection_label %></span>
+      <span class="po-breadcrumb"><%= previews_nav_label %></span>
       <sl-icon name="chevron-right" class="po-breadcrumb-divider"></sl-icon>
       <% breadcrumbs.each do |node| %>
         <span class="po-breadcrumb"><%= node.label %></span>
