--- a/app/components/lookbook/ui/layouts/preview_inspector/preview_inspector.css
+++ b/app/components/lookbook/ui/layouts/preview_inspector/preview_inspector.css
@@ -5,7 +5,7 @@
   .inspector-layout {
     --divider-width: 1px;
     --min: 200px;
-    --max: 600px;
+    --max: calc(100% - var(--min));
 
     height: 100%;
     width: 100%;
