--- a/app/components/lookbook/ui/tab_group/tab_group.css
+++ b/app/components/lookbook/ui/tab_group/tab_group.css
@@ -10,7 +10,7 @@
 
   sl-tab {
     &::part(base) {
-      height: var(--lookbook-toolbar-height);
+      height: calc(var(--lookbook-toolbar-height) - 1px);
       padding-block: 0;
       padding-inline: var(--sl-spacing-medium);
     }
