--- a/app/components/lookbook/ui/tabbed_pane/tabbed_pane.css
+++ b/app/components/lookbook/ui/tabbed_pane/tabbed_pane.css
@@ -4,7 +4,7 @@
   position: relative;
 
   .pane-toolbar {
-    height: var(--lookbook-toolbar-height);
+    height: calc(var(--lookbook-toolbar-height));
     display: flex;
     align-items: center;
     padding-right: var(--sl-spacing-2x-small);
