--- a/app/views/lookbook/pages/page.html.erb
+++ b/app/views/lookbook/pages/page.html.erb
@@ -1,6 +1,1 @@
-<%= lookbook_page do %>
-# <%= @page.title %>
-
-<%= link_to "home", lookbook.root_path %>
-
-<% end %>
+<%= lookbook_page(@page) %>
