--- a/app/components/lookbook/ui/public/code/code.html.erb
+++ b/app/components/lookbook/ui/public/code/code.html.erb
@@ -1,3 +1,3 @@
 <%= render component_tag(x: {data: "code"}) do %>
-  <pre><code x-ref="code" class="language-<%= language %>"><%= raw source %></code></pre>
+  <pre><code x-ref="code" class="language-<%= language %>"><%= source %></code></pre>
 <% end %>
