--- a/app/components/lookbook/ui/public/page/page.css
+++ b/app/components/lookbook/ui/public/page/page.css
@@ -1,2 +1,26 @@
 [data-component="page"] {
+
+  .page-slat {
+    padding-inline: var(--sl-spacing-x-large);
+  }
+
+  .page-header {
+    border-bottom: 1px solid var(--sl-color-neutral-300);
+    padding-block: var(--sl-spacing-x-large);
+  }
+
+  .page-title {
+    font-weight: var(--sl-font-weight-bold);
+    font-size: var(--sl-font-size-2x-large);
+  }
+
+  .page-body {
+    padding-top: var(--sl-spacing-2x-large);
+    padding-bottom: var(--sl-spacing-3x-large);
+  }
+
+  .page-footer {
+    border-top: 1px solid var(--sl-color-neutral-300);
+    padding-block: var(--sl-spacing-x-large);
+  }  
 }
