--- a/app/views/lookbook/inspector/panels/_source.html.erb
+++ b/app/views/lookbook/inspector/panels/_source.html.erb
@@ -1,11 +1,11 @@
-<%= lookbook_inspector_panel(:code, id: dom_id(target, :source_panel), language: target.source_language) do %>
-<% target.scenarios.each do |scenario| %>
-<% if target.scenarios.many? %>
-<%= code_comment(scenario.source_language, scenario.label) %>
-<%= scenario.source %>
+<%= lookbook_inspector_panel(:code, id: dom_id(@target, :source_panel), language: @target.source_language) do %>
+<% @target.scenarios.each do |scenario| %>
+<% if @target.scenarios.many? %>
+<%== code_comment(scenario.source_language, scenario.label) %>
+<%== scenario.source %>
 
 <% else %>
-<%= scenario.source %>
+<%== scenario.source %>
 <% end %>
 <% end %>
 <% end %>
