--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -1,1 +1,3 @@
-<%= lookbook_page_viewport(src: main_app.lookbook_render_page_path(@page)) %>
+<%= lookbook_pane(id: dom_id(@page)) do %>
+  <%= lookbook_page_viewport(src: main_app.lookbook_render_page_path(@page)) %>
+<% end %>
