--- a/app/components/lookbook/ui/app/page_viewport/page_viewport.html.erb
+++ b/app/components/lookbook/ui/app/page_viewport/page_viewport.html.erb
@@ -1,3 +1,3 @@
-<%= render component_tag(x: {data: "pageViewport"}) do %>
-  <iframe src="<%= src %>" frameborder="0" @message.window="handleMessage"></iframe>
+<%= render component_tag(x: {data: "pageViewport", "@lookbook:page-update.window": "reload"}) do %>
+  <iframe x-ref="iframe" src="<%= src %>" frameborder="0" @message.window="handleMessage" seamless></iframe>
 <% end %>
