--- a/app/components/lookbook/ui/app/preview_inspector/code_panel/code_panel.css
+++ b/app/components/lookbook/ui/app/preview_inspector/code_panel/code_panel.css
@@ -1,17 +1,20 @@
 [data-component="panel"][data-panel="code"] {
   .code-panel-code {
     height: 100%;
-    position: relative;
+    width: 100%;
 
     [data-component="code"] {
       height: 100%;
+      width: 100%;
+      overflow: hidden;
 
       pre,
       code {
         height: 100%;
+        width: 100%;
       }
 
-      code {
+      pre {
         overflow: auto;
       }
     }
